table: prefer wrapper.valueOf methods to constructors
Use e.g. Short.valueOf(x) in preference to new Short(x) since it
may be more efficient (avoid object creation in some cases).